menu fix on ie

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,7 +34,7 @@ header {
 }
 
 header #logo {
-	margin-top: 17px;
+	margin-top: 16px;
 	margin-bottom: 10px;
 }
 
@@ -50,7 +50,7 @@ header #logo {
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#c4bbaa', endColorstr='#e3dfd6'); /* for IE */
 }
 
-nav#main_menu {
+.main_menu {
 	position: absolute;
 	text-align: center;
 	font-size: 20px;
@@ -63,12 +63,12 @@ nav#main_menu {
 	z-index: 0;
 }
 
-nav ul {
+.main_menu ul {
 	list-style: none;
 	margin-top: 190px;
 }
 
-nav li {
+.main_menu li {
 	display: inline;
 	padding: 0px 10px 0px 0px;
 	
